Fix T48421: AO pass broken, only works when AO in cycles is enabled